# Talkiwi

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.ja.md  README.md  README.zh-CN.md  ROADMAP.md
.agent/skills/commit-craft/: SKILL.md
.agents/skills/commit-craft/assets/: template.json
.agents/skills/commit-craft/references/: expert_rules.md
.agents/skills/commit-craft/scripts/: analyze_changes.py  lint_commit_message.py  suggest_commit_groups.py
.claude/: launch.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release.yml
.metamove/skills/commit-craft/references/: anti_patterns.md
apps/desktop/: ball.html  index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/.claude/: launch.json
apps/desktop/src/: App.tsx  types.ts
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs  session_manager.rs  widget_preview.rs
apps/desktop/src-tauri/src/commands/: audio.rs  capture.rs  config.rs  history.rs  mod.rs  model.rs  permissions.rs  session.rs  telemetry.rs  trace.rs
apps/desktop/src/ball/: BallApp.test.tsx  BallApp.tsx  IdleBall.tsx  SiriWave.tsx  TraceToolbar.tsx  ball-main.tsx  ball.css  timelineGeometry.test.ts  timelineGeometry.ts  useBallState.test.tsx  useBallState.ts  useTracePermissions.ts
apps/desktop/src/components/: ErrorBoundary.test.tsx  ErrorBoundary.tsx
apps/desktop/src/components/Editor/: ActionLane.tsx  ActionTag.tsx  EditorPanel.tsx  TimeRuler.tsx  TimelineEditor.tsx  Waveform.tsx
apps/desktop/src/components/History/: HistoryDetail.test.tsx  HistoryDetail.tsx  HistoryList.test.tsx  HistoryList.tsx
apps/desktop/src/components/Onboarding/: Onboarding.tsx
apps/desktop/src/components/Output/: CopyButton.tsx  OutputPreview.tsx  ReferenceAnnotation.tsx
apps/desktop/src/components/Panel/: Panel.tsx  PanelHeader.tsx
apps/desktop/src/components/Record/: RecordButton.test.tsx  RecordButton.tsx  RecordTimer.tsx
apps/desktop/src/components/Settings/: PermissionSettings.tsx  ProviderSettings.tsx  QualityPanel.test.tsx  QualityPanel.tsx  Settings.tsx
apps/desktop/src/components/Shell/: MarkdownPanel.test.tsx  MarkdownPanel.tsx  ReviewPanel.test.tsx  ReviewPanel.tsx  Shell.tsx  Sidebar.tsx  shell.css
apps/desktop/src/components/Timeline/: ActionEventCard.tsx  ActionTrack.tsx  SpeakTrack.tsx  Timeline.test.tsx  Timeline.tsx
apps/desktop/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  MarbleDiagram.test.tsx  MarbleDiagram.tsx  MarblePopover.tsx  Progress.tsx  Spinner.tsx  Toast.test.tsx  (+1 more)
apps/desktop/src/hooks/: usePermissions.test.ts  usePermissions.ts  useSessionEvents.test.ts  useSessionEvents.ts  useTauriEvent.test.ts  useTauriEvent.ts
apps/desktop/src/i18n/: zh.ts
apps/desktop/src/services/: audio.ts  capture.ts  config.ts  history.test.ts  history.ts  model.ts  permissions.test.ts  permissions.ts  runtime.ts  session.test.ts  session.ts  telemetry.ts  trace.ts  window.ts
apps/desktop/src/stores/: editorStore.ts  outputStore.ts  sessionStore.test.ts  sessionStore.ts  settingsStore.test.ts  settingsStore.ts  timelineStore.ts  toastStore.ts
apps/desktop/src/styles/: global.css  tokens.css  typography.css
crates/talkiwi-asr/: Cargo.toml
crates/talkiwi-asr/examples/: inspect_whisper.rs
crates/talkiwi-asr/src/: audio_capture.rs  audio_input.rs  audio_source.rs  lib.rs  model_manager.rs  null_provider.rs  openai_provider.rs  vad.rs  wav_writer.rs  whisper_provider.rs
crates/talkiwi-asr/tests/: whisper_integration.rs
crates/talkiwi-capture/: Cargo.toml
crates/talkiwi-capture/src/: click.rs  clipboard.rs  file.rs  focus.rs  lib.rs  page.rs  screenshot.rs  selection.rs
crates/talkiwi-core/: Cargo.toml
crates/talkiwi-core/src/: clock.rs  config.rs  error.rs  event.rs  lib.rs  locale.rs  output.rs  preview.rs  session.rs  telemetry.rs  timeline.rs
crates/talkiwi-core/src/traits/: asr.rs  capture.rs  intent.rs  mod.rs
crates/talkiwi-db/: Cargo.toml
crates/talkiwi-db/src/: lib.rs  session_repo.rs
crates/talkiwi-db/src/migrations/: 001_init.sql  mod.rs
crates/talkiwi-engine/: Cargo.toml
crates/talkiwi-engine/src/: anchor.rs  assembler.rs  candidate.rs  convert.rs  importance.rs  lib.rs  ollama_provider.rs  payload_render.rs  resolver.rs  retrieval.rs
crates/talkiwi-engine/src/prompts/: system.txt  system_v2.txt
crates/talkiwi-engine/tests/: ollama_integration.rs
crates/talkiwi-eval/: Cargo.toml
crates/talkiwi-eval/fixtures/intent/: 001-rewrite-selection.json  002-coref-composition.json  003-coref-contrast.json
crates/talkiwi-eval/fixtures/trace/: 001-basic-trace.json
crates/talkiwi-eval/golden/intent/: 001-rewrite-selection.golden.json  002-coref-composition.golden.json  003-coref-contrast.golden.json
crates/talkiwi-eval/golden/trace/: 001-basic-trace.golden.json
crates/talkiwi-eval/src/: intent_eval.rs  lib.rs  main.rs  metrics.rs  reporter.rs  trace_eval.rs
crates/talkiwi-track/: Cargo.toml
crates/talkiwi-track/src/: action.rs  lib.rs  speak.rs
crates/talkiwi-track/tests/: e2e_pipeline.rs  e2e_waveform_pipeline.rs
docs/prd/: 2026-04-12-prd-discovery.md
scripts/: check-release-readiness.sh  dev-mac.sh  validate-widget-recorder.sh
website/: index.html  styles.css
