[workspace]
resolver = "2"
members = [
    "crates/talkiwi-core",
    "crates/talkiwi-asr",
    "crates/talkiwi-track",
    "crates/talkiwi-capture",
    "crates/talkiwi-engine",
    "crates/talkiwi-db",
    "apps/desktop/src-tauri",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
thiserror = "2"
async-trait = "0.1"
