[package]
name = "talkiwi-asr"
version = "0.1.0"
edition = "2021"

[features]
default = []
whisper = ["dep:whisper-rs"]
download = ["dep:reqwest", "dep:futures-util"]
openai = ["dep:reqwest", "dep:serde", "dep:serde_json"]

[dependencies]
talkiwi-core = { path = "../talkiwi-core" }
async-trait = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
cpal = "0.15"
rubato = "0.14"
ringbuf = "0.4"
whisper-rs = { version = "0.14", optional = true }
reqwest = { version = "0.12", features = ["stream", "multipart", "json"], optional = true }
futures-util = { version = "0.3", optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
hound = "3.5"
tempfile = "3"
