[package]
name = "talkiwi-db"
version = "0.1.0"
edition = "2021"

[dependencies]
talkiwi-core = { path = "../talkiwi-core" }
rusqlite = { version = "0.31", features = ["bundled", "serde_json"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
