[package]
name = "talkiwi-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
talkiwi-core = { path = "../talkiwi-core" }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
regex = "1"
uuid = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
