[package]
name = "talkiwi-eval"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
talkiwi-core = { path = "../talkiwi-core" }
talkiwi-engine = { path = "../talkiwi-engine" }
