[package]
name = "talkiwi-track"
version = "0.1.0"
edition = "2021"

[dependencies]
talkiwi-core = { path = "../talkiwi-core" }
talkiwi-asr = { path = "../talkiwi-asr" }
async-trait = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
tempfile = "3"
